<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/NewGroup"
        android:title="@string/new_group" />

    <item android:id="@+id/NewBroadcast"
        android:title="@string/newBroadcast"/>

    <item android:id="@+id/LinkedDevice"
        android:title="@string/linkedDevices"
        />

    <item android:id="@+id/StarredMessages"
        android:title="@string/StarredMessages"/>

    <item android:id="@+id/Sittings"
        android:title="@string/settings"/>

    <item android:id="@+id/camera"
        android:title=""
        android:icon="@drawable/ic_baseline_photo_camera_24"
        app:showAsAction="always"
        android:iconTint="@color/white"/>

    <item android:id="@+id/search"
        android:title=""
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"/>

</menu>