<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_15sdp"
    android:padding="@dimen/_10sdp"
    android:paddingVertical="@dimen/_3sdp"
    xmlns:tools="http://schemas.android.com/tools">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImg"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/userImg"
        app:layout_constraintBottom_toBottomOf="@+id/userImg"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userImg"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Contents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/test"
        android:textColor="#676666"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toEndOf="@id/userImg"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timeChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeChat"
        android:textColor="#9E9C9C"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />


</androidx.constraintlayout.widget.ConstraintLayout>